--- a/gameplay/package.json
+++ b/gameplay/package.json
@@ -25,6 +25,7 @@
     "expo-cli": "^5.3.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
+    "expo-linking": "~3.0.0",
     "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
